syntax = "proto3";

package aesm_service;  // import "github.com/inclavare-containers/runectl/proto"

message GetTokenRequest {
    bytes enclavehash = 1;
    bytes modulus     = 2;
    bytes attributes  = 3;
    uint32 timeout    = 4;
}

message GetTokenRequestMessage {
    GetTokenRequest req = 3;
}

message GetTokenResponse {
    int32 error = 1;
    bytes token = 2;
}

message GetTokenResponseMessage {
    GetTokenResponse resp = 3;
}
